fixed tablet layout issue

--- a/styles.css
+++ b/styles.css
@@ -519,7 +519,7 @@ a {
   opacity: 1;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
   .partners__box {
     flex-direction: row;
     justify-content: center;
